@@ -53,11 +53,6 @@ public:
 	{
 		pts.push_back(coord);
 	}
-
-	virtual void filter_rw(geom::Coordinate *coord) const
-	{
-		assert(0); // CoordinateArrayFilter is a read-only filter
-	}
 };
 
 
@@ -68,6 +63,9 @@ public:
 
 /**********************************************************************
  * $Log$
+ * Revision 1.2  2006/06/19 23:33:03  strk
+ * Don't *require* CoordinateFilters to define both read-only and read-write methods.
+ *
  * Revision 1.1  2006/03/09 16:46:49  strk
  * geos::geom namespace definition, first pass at headers split
  *
